syntax = "proto3";
package influxdata.iox.predicate.v1;
option go_package = "github.com/influxdata/iox/predicate/v1";

// Represents a parsed predicate for evaluation by the InfluxDB IOx query engine.
message Predicate {
  // Was `table_names`.
  reserved 1;

  // Was `field_columns`.
  reserved 2;

  // Was `partition_key`.
  reserved 3;

  // Optional timestamp range: only rows within this range are included in results. Other rows are excluded.
  TimestampRange range = 4;

  // Optional arbitrary predicates, represented as list of expressions applied a logical conjunction (aka they are
  // 'AND'ed together). Only rows that evaluate to TRUE for all these expressions should be returned. Other rows are
  // excluded from the results.
  repeated Expr exprs = 5;
}

// Specifies a continuous range of nanosecond timestamps.
message TimestampRange {
  // Start defines the inclusive lower bound.
  int64 start = 1;

  // End defines the exclusive upper bound.
  int64 end = 2;
}

// Single expression to be used as parts of a predicate.
//
// Only very simple expression of the type `<column> <op> <scalar>` are supported.
message Expr {
  // Column (w/o table name).
  string column = 1;

  // Operator.
  Op op = 2;

  // Scalar value.
  Scalar scalar = 3;
}

// Binary operator that can be evaluated on a column and a scalar value.
enum Op {
  // Unspecified operator, will result in an error.
  OP_UNSPECIFIED = 0;

  // Strict equality (`=`).
  OP_EQ = 1;

  // Inequality (`!=`).
  OP_NE = 2;
}

// Scalar value of a certain type.
message Scalar {
  oneof value {
    bool value_bool = 1;
    int64 value_i64 = 2;
    double value_f64 = 3;
    string value_string = 4;
  }
}
